# simppl

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  index.html  update.sh
.github/workflows/: ci.yml
cmake/: FindDBus.cmake  GoogleTest-CMakeLists.txt.in  SimpplConfig.cmake.in
example/: CMakeLists.txt
example/EchoExample/: EchoExample.cpp  EchoService.h
examples/: CMakeLists.txt
examples/alpha/: io2.cpp  pool.cpp  store.cpp
examples/asio/: dbusexecutor.cpp  dbusexecutor.h  main.cpp
examples/calculator/: CMakeLists.txt  calculator.h  calculator_clnt.cpp  calculator_cpu.cpp
examples/cmdline/: CMakeLists.txt  cmdline.cpp  commands.cpp
examples/echo/: echoservice.h  main.cpp
examples/inifile/: CMakeLists.txt  inifile.cpp  test.ini
examples/ipc2/: CMakeLists.txt  README  TODO  attributes.cpp  bench.txt  benchmark.cpp  broker.cpp  brokerclient.h  calculator.h  calculator_clnt.cpp  calculator_clnt1.cpp  calculator_cpu.cpp  except.cpp  ipc2.cpp  ipc2_e.cpp  sbroker.cpp  scat.cpp  session.cpp  simple.cpp
examples/misc/: CMakeLists.txt  func.cpp  intrusive_list.cpp  safe_ptr.cpp  sigslot.cpp  sigslot2.cpp  tribool.cpp  tup.cpp  tuptl.cpp  typelist.cpp  variant.cpp
examples/mixed/: mixed.cpp
examples/networkmanager/: networkmanager.cpp  objectmanager.h
examples/wpa_supplicant/: wpa.cpp  wpa_supplicant.h
include/: a.out  alignedstorage.h  bind_adapter.h  brokerclient.h  cmdline_extensionpoint.h  function.h  if.h  inifile.h  inifile_extensionpoint.h  intrusive_list.h  ipc2.h  noninstantiable.h  ref.h  sbroker.h  sigslot.h  static_check.h  tribool.h  typelist.h  typetraits.h  variant.h  wrappers.h
include/simppl/: ClientRequest.h  ConnectionState.h  alignedstorage.h  allDecoder.h  any.h  attribute.h  bind.h  bind_adapter.h  blocking.h  bool.h  brokerclient.h  buffer.h  callstate.h  calltraits.h  clientside.h  cmdline.h  cmdline_extensionpoint.h  connectionstate.h  dispatcher.h  error.h  exception.h  filedescriptor.h  for_each.h  function.h  function_traits.h  if.h  inifile.h  inifile_extensionpoint.h  interface.h  intrusive_list.h  ipc2.h  map.h  noninstantiable.h  objectmanagermixin.h  objectpath.h  pair.h  parameter_deduction.h  pendingcall.h  pod.h  property.h  (+24 more)
include/simppl/api/: objectmanager.h
include/simppl/detail/: basicinterface.h  callinterface.h  clientresponseholder.h  constants.h  deserialize_and_return.h  error.h  frames.h  holders.h  inifile.h  interposer.h  is_vector.h  objectmanagerinterposer.h  parameter_deduction.h  parented.h  serialization.h  serverholder.h  serverrequestbasesetter.h  serverresponseholder.h  serversignalbase.h  signalrecipient.h  util.h  validation.h
src/: CMakeLists.txt  allDecoder.cpp  any.cpp  basicinterface.cpp  bool.cpp  brokerclient.cpp  callstate.cpp  clientresponseholder.cpp  clientside.cpp  dispatcher.cpp  error.cpp  exception.cpp  filedescriptor.cpp  holders.cpp  objectmanagermixin.cpp  objectpath.cpp  pendingcall.cpp  properties.cpp  sbroker.cpp  scat.cpp  serialization.cpp  serverrequestdescriptor.cpp  serverresponseholder.cpp  serverside.cpp  serversignalbase.cpp  sessiondata.cpp  signalrecipient.cpp  skeletonbase.cpp  string.cpp  stub.cpp  stubbase.cpp  timeout.cpp  util.cpp  wstring.cpp
tests/: CMakeLists.txt  any.cpp  async_server.cpp  attributes.cpp  buffer.cpp  errors.cpp  introserver.cpp  ipc2_async_server.cpp  ipc2_attributes.cpp  ipc2_errors.cpp  ipc2_simple.cpp  ipc2_timeout.cpp  multi_interface.cpp  newapi.cpp  no_interface.cpp  objectmanager.cpp  properties.cpp  serialization.cpp  simple.cpp  timeout.cpp  type_mapper.cpp  utils.cpp  variant.cpp
